<resources>
    <string name="app_name">Schedule BA</string>
    <string name="url_issues" translatable="false">https://github.com/kaesaecracker/CampusDualAndroid/issues</string>
    <string name="title_activity_settings">Settings</string>
    <string name="bugsbtn_hint">Issue Tracker</string>
    <string name="format_date" translatable="false">dd.MM.</string>
    <string name="format_time" translatable="false">HH:mm</string>
    <string name="format_weekday" translatable="false">EEEE</string>
    <string name="url_default_backend" translatable="false">https://selfservice.campus-dual.de/room/json</string>
    <string name="settings_matrikel">Matriculation Number</string>
    <string name="settings_hash">Hash</string>
    <string name="widget_lessonCount">Lesson(s)</string>
    <string name="sample_weekday" translatable="false">Someday</string>
    <string name="sample_date" translatable="false">31.12.</string>
    <string name="sample_time" translatable="false">12:34</string>
    <string name="sample_lesson_title" translatable="false">Some very long title</string>
    <string name="sample_lesson_room" translatable="false">1.337</string>
    <string name="sample_timespan" translatable="false">12:34-15:06</string>
    <string name="sample_lessons" translatable="false">5 Lesson(s)</string>
    <string name="sample_lesson_prof" translatable="false">Rüdiger Hintermann</string>
    <string name="iconDescr_prof">Professor</string>
    <string name="iconDescr_time">Time</string>
    <string name="iconDescr_date">Date</string>
    <string name="iconDescr_location">Room</string>
    <string name="action_playstore" translatable="false">Play Store</string>
    <string name="settings_logindata">Campus Dual Login</string>
    <string name="settings_loginHelpText">Please type in your matriculation number (without \'s\') and your Campus Dual Hash. If you do not know what your hash is or how you get it click this link: https://mattishub.xyz/j/cdhash</string>
    <string name="settings_tooShort">That seems too short</string>
    <string name="settings_tooLong">That seems to long</string>
    <string name="settings_correct">That seems correct. Saved!</string>
    <string name="settings_empty">Enter something</string>
    <string name="disclaimer">"This app is not affiliated, associated, authorized, endorsed by, or in any way officially connected with Berufsakademie Sachsen, or any of its subsidiaries or its affiliates.\nThe official BA Dresden website can be found at https://www.ba-dresden.de.\n\nThe information you enter into this app stay on your phone. There is no tracking library in this app and the network requests (which will contain your matriculation number and your hash) only go to the specified location.\n    "</string>
    <string name="disclaimerTitle">Disclaimer</string>
    <string name="settings_backendTitle">Backend</string>
    <string name="settings_backendDescription">You can change the URL used for making requests. Click the button below to reset it to the default value.</string>
    <string name="settings_backendHint">Backend URL</string>
    <string name="schedule_refreshFailed">Refresh Failed. Swipe down to retry or check settings.</string>
    <string name="settings_backendResetBtnContentDescr">Reset Backend URL</string>
    <string name="firstlaunch_hello">Hello</string>
    <string name="firstlaunch_there">there.</string>
    <string name="firstlaunch_text">It seems like it is the first time you have launched this app.</string>
    <string name="firstlaunch_changeSettings">You will have to change the login data in the settings for full functionality.\\n\\nPlease also read the following notice:</string>
    <string name="firstlaunch_title" translatable="false">First Launch</string>
    <string name="schedule_elementsLoaded">Lessons</string>
    <string name="format_datetime" translatable="false">dd.MM. HH:mm</string>
    <string name="schedule_lastRefresh">Last download</string>
    <string name="firstlaunch_baLogoContentDescr">BA Logo</string>
    <string name="firstlaunch_confirmCaption">Understood - Open Settings</string>
    <string name="schedule_noCachedWaitForDownload">There is no offline data. Swipe down to retry.</string>
    <string name="settings_theme_black">Black (Beta)</string>
    <string name="settings_theme_dark">Night</string>
    <string name="settings_theme_light">Day</string>
    <string name="settings_theme_default">System default</string>
    <string name="settings_themeCard_headline">Themes</string>
    <string name="settings_themeCard_explanation">Here you can change the color palette of the app. You have to restart the app to apply the changes.</string>
    <string name="action_selfservice">Selfservice</string>
    <string name="action_links">Links</string>
    <string name="settings_theme_restartMessage">Restart the app to apply changes.</string>
    <string name="settings_theme_restartButton">Resart</string>
    <string name="url_selfservice" translatable="false">https://selfservice.campus-dual.de</string>
    <string name="settings_backendReset">Reset</string>
    <string name="settings_forceSecureConnectionEnabledExplanation">An invalid server certificate will result in a failed download</string>
    <string name="settings_forceSecureConnectionDisabledExplanation">All certificates will be accepted, authentication errors ignored</string>
    <string name="settings_forceSecureConnectionLabel">Force secure connection</string>
    <string name="schedule_lastBackgroundFailed">The last background download failed!</string>
    <string name="action_refresh">Refresh schedule</string>
    <string name="widget_not_available">Wiget not available on Android Lollipop</string>
</resources>
