<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@id/action_schedule_to_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_activity_settings"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_links"
        android:icon="@drawable/ic_link"
        android:title="@string/action_links"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_issues"
                android:icon="@drawable/ic_bug_report"
                android:title="@string/bugsbtn_hint"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/action_playstore"
                android:icon="@drawable/ic_store"
                android:title="@string/action_playstore"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/action_selfservice"
                android:icon="@drawable/ic_public"
                android:title="@string/action_selfservice"
                app:showAsAction="ifRoom" />
        </menu>
    </item>

    <item
        android:id="@+id/action_startFirstLaunch"
        android:title="Open First Run Screen"
        android:visible="false"
        app:showAsAction="never"
        tools:ignore="HardcodedText" />
</menu>