<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/textView5"
        style="?attr/lessonTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="-"
        app:layout_constraintBaseline_toBaselineOf="@+id/lesson_timeFrom"
        app:layout_constraintStart_toEndOf="@+id/lesson_timeFrom"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/lesson_timeTo"
        style="?attr/lessonTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/sample_time"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5" />

    <include
        android:id="@+id/lesson_dayheader"
        layout="@layout/view_lesson_dayheader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/lesson_profIcon"
        style="?attr/lessonIconStyle"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/iconDescr_prof"
        app:layout_constraintBottom_toBottomOf="@+id/lesson_prof"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lesson_prof"
        app:srcCompat="@drawable/ic_person" />

    <ImageView
        android:id="@+id/lesson_pinIcon"
        style="?attr/lessonIconStyle"
        android:contentDescription="@string/iconDescr_location"
        app:layout_constraintBottom_toBottomOf="@+id/lesson_room"
        app:layout_constraintStart_toStartOf="@+id/lesson_clockicon"
        app:layout_constraintTop_toTopOf="@+id/lesson_room"
        app:srcCompat="@drawable/ic_pin" />

    <ImageView
        android:id="@+id/lesson_clockicon"
        style="?attr/lessonIconStyle"
        android:layout_marginEnd="100dp"
        android:contentDescription="@string/iconDescr_time"
        app:layout_constraintBottom_toBottomOf="@+id/lesson_timeFrom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lesson_timeFrom"
        app:srcCompat="@drawable/ic_clock" />

    <TextView
        android:id="@+id/lesson_timeFrom"
        style="?attr/lessonTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:lines="1"
        android:text="@string/sample_time"
        app:layout_constraintBaseline_toBaselineOf="@+id/lesson_title"
        app:layout_constraintStart_toEndOf="@+id/lesson_clockicon" />

    <TextView
        android:id="@+id/lesson_room"
        style="?attr/lessonTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:lines="1"
        android:text="@string/sample_lesson_room"
        android:textAllCaps="true"
        app:layout_constraintBaseline_toBaselineOf="@+id/lesson_prof"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/lesson_timeFrom" />

    <TextView
        android:id="@+id/lesson_prof"
        style="?attr/lessonTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:lines="1"
        android:text="@string/sample_lesson_prof"
        app:layout_constraintEnd_toStartOf="@+id/lesson_pinIcon"
        app:layout_constraintStart_toEndOf="@+id/lesson_profIcon"
        app:layout_constraintTop_toBottomOf="@+id/lesson_title" />

    <TextView
        android:id="@+id/lesson_title"
        style="?attr/lessonTitleStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:lines="1"
        android:text="@string/sample_lesson_title"
        app:layout_constraintEnd_toStartOf="@+id/lesson_clockicon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lesson_dayheader" />

</androidx.constraintlayout.widget.ConstraintLayout>