<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/scheduleFragment">

    <fragment
        android:id="@+id/scheduleFragment"
        android:name="xyz.mattishub.campusDual.ScheduleFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_schedule">
        <action
            android:id="@+id/action_schedule_to_settings"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/exit_to_left"
            app:popEnterAnim="@anim/enter_from_left"
            app:popExitAnim="@anim/exit_to_right"
            app:popUpTo="@+id/scheduleFragment" />
        <action
            android:id="@+id/action_schedule_to_firstLaunch"
            app:destination="@id/firstLaunchFragment" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="xyz.mattishub.campusDual.SettingsFragment"
        android:label="@string/title_activity_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/firstLaunchFragment"
        android:name="xyz.mattishub.campusDual.FirstLaunchFragment"
        android:label="@string/firstlaunch_title">
        <action
            android:id="@+id/action_firstLaunch_to_settings"
            app:destination="@id/settingsFragment"
            app:enterAnim="@anim/enter_from_right"
            app:exitAnim="@anim/exit_to_left"
            app:popEnterAnim="@anim/enter_from_left"
            app:popExitAnim="@anim/exit_to_right"
            app:popUpTo="@+id/scheduleFragment" />
    </fragment>
</navigation>