<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lesson_dayheader"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:elevation="8dp"
    android:paddingBottom="4dp"
    android:theme="@android:style/ThemeOverlay.Material.Dark">

    <ImageView
        android:id="@+id/dayheader_dateIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/iconDescr_date"
        app:layout_constraintBottom_toBottomOf="@+id/dayheader_date"
        app:layout_constraintEnd_toStartOf="@+id/dayheader_date"
        app:srcCompat="@drawable/ic_today_black_24dp" />

    <TextView
        android:id="@+id/dayheader_weekday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:lines="1"
        android:text="@string/sample_weekday"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/dayheader_dateIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dayheader_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:lines="1"
        android:text="@string/sample_date"
        android:textColor="@color/icons"
        app:layout_constraintBaseline_toBaselineOf="@+id/dayheader_weekday"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
